# NetLab4

./: .gitignore  Cargo.toml  README.md  check.sh  generate-openapi.sh  members.json  specification.yaml
common/: Cargo.toml
common/src/: errors.rs  helpers.rs  lib.rs  parsing.rs
common/src/helpers/: shared.rs
common/src/helpers/shared/: map.rs  vec.rs
openapi_client/: Cargo.toml  README.md
openapi_client/.openapi-generator/: FILES
openapi_client/api/: openapi.yaml
openapi_client/docs/: FilesList.md  InlineResponse200.md  InlineResponse2001.md  KillResult.md  MoveTo.md  Notification.md  Query.md  Role.md  UsersList.md  UsersListUsers.md  main_api.md
openapi_client/examples/client/: main.rs
openapi_client/examples/server/: server.rs
openapi_client/src/: context.rs  lib.rs  models.rs
openapi_client/src/client/: mod.rs
openapi_client/src/server/: mod.rs
primes-client/: Cargo.toml
primes-client-check/: Cargo.toml
primes-client-check/src/: main.rs
primes-client/src/: chars_reader.rs  commands.rs  lib.rs  main.rs  messages.rs
src/: main.rs
tas-server/: Cargo.toml
tas-server-check/: Cargo.toml
tas-server-check/src/: main.rs
tas-server/src/: lib.rs  members.rs  messages.rs  parsing.rs  server.rs
