[package]
name = "net-lab-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "common",
    "tas-server",
    "tas-server-check",
    "primes-client",
    "primes-client-check",
]

[dependencies]
tas-server = { path = "tas-server" }
