[package]
name = "net-lab-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "common",
    "tas-server",
    "openapi_client",
]

[dependencies]
tas-server = { path = "tas-server" }
openapi_client = { path = "./openapi_client" }
