[package]
name = "primes-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "primes_client"

[[bin]]
name = "primes-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

common = { path = "../common" }
